# RPC-Node-Latency-Tool

./: .gitignore  LICENSE  README.md  TODO.txt  config.toml  env.example  pyproject.toml
core/: __main__.py  cli.py  config.py  schema.py
core/pipeline/: connect.py  disconnect_logger.py  listener.py  processor.py  runner.py  scanner.py  state.py  writer.py
sample-data/: run_07-02-2026_19-17-50_UTC.disconnects.txt
src/: cli.py  config.py  schema.py
src/analysis/: charts.py  prep.py  runner.py  transform.py
src/cleaning/: cleaner.py
src/pipeline/: connect.py  connections.py  disconnect_logger.py  processor.py  runner.py  state.py  writer.py
tests/: test-config  test-schema.py
