[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rpc-node-latency-tool"
version = "0.1.0"
description = "Compare RPC node providers by same-trade arrival latency for Polymarket trades."
readme = "README.md"
requires-python = ">=3.11"   
dependencies = [
    "websockets>=12",
    "pyarrow>=14",
    "python-dotenv>=1.0",
    "polars>=1.18",
    "matplotlib>=3.8",
    "seaborn>=0.13",
]

# Lets you run `latency-data ingest` after `pip install -e .`
# (equivalent to `python -m src ingest`).
[project.scripts]
latency-data = "src.cli:main"

# Package the `src` package and its subpackages
[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]