[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "polymarket-rpc-latency-bench"
version = "1.0.0"
description = "A tool that collects, cleans, and analyzes latency data across Polygon RPC node providers for Polymarket trades."
readme = "README.md"
requires-python = ">=3.11"   
dependencies = [
    "websockets>=12",
    "pyarrow>=14",
    "python-dotenv>=1.0",
    "polars>=1.18",
    "matplotlib>=3.8",
    "seaborn>=0.13",
]

# Package the src package and its subpackages
[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]